rhacs_policies/deploy/securitypolicy-require-readonlyrootfs.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: require-readonly-rootfs
  namespace: stackrox
spec:
  policyName: Require read-only root filesystem
  categories:
    - Security
  severity: HIGH_SEVERITY
  lifecycleStages:
    - DEPLOY
  policySections:
    - name: Root Filesystem
      description: Ensure containers are readonly
      policyGroups:
        - name: Root Filesystem
          fieldName: rootfs
          policies:
            - name: Require readonly root filesystem
              description: Containers must have read-only rootfs
              type: K8S
